public class AdditionalPlaceInfoResponseDto
{
    public LocationInfoResponseDto LocationInfo { get; set; }
}