using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace MauiDemo2.Models
{
    public class Point
    {
        public int Id { get; set; }

        public int LocationId { get; set; }

        public double Latitude { get; set; }

        public double Longitude { get; set; }
    }
}
