using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace MauiDemo2.Models
{
    public class Subscription
    {
        public int UserId { get; set; }
        public int FollowedUserId { get; set; }
    }
}
